feat: add registrar comparison layer (Namecheap, GoDaddy, Porkbun, Cloudflare, Upflare)
- Registrar adapter interface and mock implementations
- comparePrices helper and wiring to /api/search enrichment
- Show best price in suggestion list
- Update env example with registrar keys

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ GODADDY_API_KEY=your_godaddy_api_key
 GODADDY_API_SECRET=your_godaddy_api_secret
 PORKBUN_API_KEY=your_porkbun_api_key
 PORKBUN_SECRET_KEY=your_porkbun_secret_key
+CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
+UPFLARE_API_KEY=your_upflare_api_key
 
 # Bitcoin/Lightning Network
 LIGHTNING_WALLET_MACAROON=your_lightning_wallet_macaroon
